--- a/CSS/style.css
+++ b/CSS/style.css
@@ -25,7 +25,7 @@ body {
 .accueil {
     color:white;
     border-radius: 100px;
-    background-color: #1985A1;
+    background-color: #ffb703;
     height: 54px;
     width: 139px;
     display: flex;
@@ -59,7 +59,7 @@ body {
 .projets:hover, .contact:hover {
     color: white;
     border: none;
-    background-color: #1985A1;
+    background-color: #fcbf49;
     transition: all 0.3s;
 }
 
@@ -92,5 +92,5 @@ body {
 }
 
 .blue {
-    color: #1985A1;
+    color: #fb8500;
 }
