--- a/CSS/style.css
+++ b/CSS/style.css
@@ -97,7 +97,8 @@ body {
 }
 
 .mail-container{
-    background-color: red;
+    background-color: #20BF55;
+    border-radius: 25px;
     width: 500px;
     height: 500px;
     display: flex;
@@ -106,21 +107,27 @@ body {
     top: 120px;
     flex-direction: column;
     justify-content: space-around;
+    z-index: 2;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 #nom, #mail {
     font-family: 'Roboto', sans-serif;
-    height: 50px;
-    width: 300px;
+    height: 40px;
+    width: 200px;
     border: none;
     text-decoration: none;
-    border-radius: 100px;
-    font-size: 30px;
+    border-radius: 13px;
+    font-size: 20px;
     margin-left: 20px;
     margin-top: 10px;
     padding-left: 30px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+#mail {
+    width: 300px;
+}
 
 #message {
     height: 200px;
@@ -128,6 +135,13 @@ body {
     text-align: start;
     font-size: 30px;
     font-family: 'Roboto', sans-serif;
+    margin-left: 20px;
+    border: none;
+    border-radius: 13px;
+    padding-left: 10px;
+    padding-top: 10px;
+    font-size: 20px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 #nom:focus, #mail:focus, #message:focus {
@@ -135,14 +149,14 @@ body {
 }
 
 .btnsend {
-    background-color: red;
-    height: 150px;
+    background-color: #46494C;
+    height: 120px;
     width: 500px;
     display: flex;
-    align-items: center;
     position: absolute;
     right: 30px;
-    top: 600px;
+    top: 580px;
+    border-radius: 25px;
 }
 
 #Sendbtn {
@@ -150,4 +164,21 @@ body {
     width: 139px;
     border: none;
     border-radius: 100px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    margin-top: 50px;
+    margin-left: 30px;
+    background-color: #20BF55;
+    text-align: center;
+    color: white;
+    font-size: 25px;
+    font-weight: 400;
+    font-family: 'Roboto', sans-serif;
+}
+
+#Sendbtn:hover {
+    background-color: #18af4a;
+}
+
+#Sendbtn:active {
+    background-color: #23cf5c;
 }
