--- a/CSS/mainproject.css
+++ b/CSS/mainproject.css
@@ -24,6 +24,8 @@
     top: 1150px;
     right: 0px;
     transition: all 0.3s ease;
+    justify-content: center;
+    align-items: center;
 }
 
 .yellow {
@@ -35,6 +37,8 @@
     left: 0;
     top: 1530px;
     transition: all 0.3s ease;
+    justify-content: center;
+    align-items: center;
 }
 
 .orange {
@@ -46,6 +50,8 @@
     top: 1500px;
     right: 0;
     transition: all 0.3s ease;
+    justify-content: center;
+    align-items: center;
 }
 
 .orange:hover {
@@ -78,6 +84,19 @@
 #calc {
     height: 200px;
     width: 200px;
-    display: flex;
+}
 
+#globe {
+    height: 200px;
+    width: 200px;
+}
+
+#tetris {
+    height: 200px;
+    width: 200px;
+}
+
+#meteo {
+    height: 200px;
+    width: 200px;
 }
