--- a/CSS/mainproject.css
+++ b/CSS/mainproject.css
@@ -1,6 +1,7 @@
 .red, .yellow, .green, .orange {
     border-radius: 10px;
     cursor: pointer;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .red {
