--- a/CSS/header.css
+++ b/CSS/header.css
@@ -98,6 +98,7 @@ html {
     justify-content: center;
     cursor: pointer;
     box-sizing: border-box;
+    transition: all 0.3s ease;
 }
 
 .projets:hover, .contact:hover {
@@ -125,7 +126,7 @@ html {
     display: flex;
     align-items: center;
     justify-content: center;
-    border: solid 7px #46494C;
+    /* border: solid 7px #46494C; */
     margin: auto;
     margin-top: 30px;
     cursor: pointer;
