--- a/CSS/mainproject.css
+++ b/CSS/mainproject.css
@@ -7,7 +7,7 @@
 .calc {
     height: 300px;
     width: 45%;
-    background-color: #1985A1;
+    background-color: #EAE151;
     display: flex;
     position: absolute;
     top: 1250px;
@@ -33,7 +33,7 @@
 .globe {
     height: 400px;
     width: 65%;
-    background-color: #20BF55;
+    background-color: #2D2A32;
     display: flex;
     position: absolute;
     top: 1150px;
@@ -58,7 +58,7 @@
 .phone {
     height: 320px;
     width: 47%;
-    background-color: #ffe100;
+    background-color: #303030;
     display: flex;
     position: absolute;
     left: 0;
@@ -83,7 +83,7 @@
 .meteo {
     display: flex;
     position: absolute;
-    background-color: orange;
+    background-color: #9BC4CB;
     height: 350px;
     width: 55%;
     top: 1500px;
