--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,7 +11,7 @@ section {
     margin-top: 500px;
 }
 
-section:before {
+/* section:before {
     content: '';
     position: absolute;
     width: 400px;
@@ -29,7 +29,7 @@ section::after {
     background: linear-gradient(#2196f3,#31ff38);
     border-radius: 50%;
     transform: translate(250px, 150px);
-}
+} */
 
 .box {
     position: relative;
