--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,8 +1,6 @@
 
 section {
     position: relative;
-    /* background: #161623; */
-    /* background-image: linear-gradient(216deg, rgba(77, 77, 77,0.05) 0%, rgba(77, 77, 77,0.05) 25%,rgba(42, 42, 42,0.05) 25%, rgba(42, 42, 42,0.05) 38%,rgba(223, 223, 223,0.05) 38%, rgba(223, 223, 223,0.05) 75%,rgba(36, 36, 36,0.05) 75%, rgba(36, 36, 36,0.05) 100%),linear-gradient(44deg, rgba(128, 128, 128,0.05) 0%, rgba(128, 128, 128,0.05) 34%,rgba(212, 212, 212,0.05) 34%, rgba(212, 212, 212,0.05) 57%,rgba(25, 25, 25,0.05) 57%, rgba(25, 25, 25,0.05) 89%,rgba(135, 135, 135,0.05) 89%, rgba(135, 135, 135,0.05) 100%),linear-gradient(241deg, rgba(55, 55, 55,0.05) 0%, rgba(55, 55, 55,0.05) 14%,rgba(209, 209, 209,0.05) 14%, rgba(209, 209, 209,0.05) 60%,rgba(245, 245, 245,0.05) 60%, rgba(245, 245, 245,0.05) 69%,rgba(164, 164, 164,0.05) 69%, rgba(164, 164, 164,0.05) 100%),linear-gradient(249deg, rgba(248, 248, 248,0.05) 0%, rgba(248, 248, 248,0.05) 32%,rgba(148, 148, 148,0.05) 32%, rgba(148, 148, 148,0.05) 35%,rgba(202, 202, 202,0.05) 35%, rgba(202, 202, 202,0.05) 51%,rgba(181, 181, 181,0.05) 51%, rgba(181, 181, 181,0.05) 100%),linear-gradient(92deg, hsl(214,0%,11%),hsl(214,0%,11%)); */
     min-height: 100vh;
     overflow: hidden;
     display: flex;
@@ -16,7 +14,7 @@ section:before {
     position: absolute;
     width: 400px;
     height: 400px;
-    background: linear-gradient(#ffc107,#e91e63);
+    background: linear-gradient(45deg,#ffc107,#e91e63);
     border-radius: 50%;
     transform: translate(-250px, -120px);
 }
@@ -26,7 +24,7 @@ section::after {
     position: absolute;
     width: 350px;
     height: 350px;
-    background: linear-gradient(#2196f3,#31ff38);
+    background: linear-gradient(115deg,#2196f3,#31ff38);
     border-radius: 50%;
     transform: translate(250px, 150px);
 }
