--- a/CSS/header.css
+++ b/CSS/header.css
@@ -21,9 +21,9 @@ html {
 }
 
 .nav {
-    width: 690px;
+    width: 300px;
     height: 73px;
-    background-color: #2d2a32c4;
+    /* background-color: #2d2a32c4; */
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -33,7 +33,7 @@ html {
     right: 50px;
     top: 30px;
     font-family: 'Roboto', sans-serif;
-    font-size: 24px;
+    font-size: 35px;
     box-sizing: border-box;
     z-index: 99;
 }
@@ -44,7 +44,7 @@ html {
     background-color: #2D2A32;
     border: 3px solid #DDD92A;
     height: 54px;
-    width: 139px;
+    width: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -89,16 +89,17 @@ html {
 .projets, .contact {
     height: 54px;
     width: 139px;
-    color: #2D2A32;
+    color: #fff;
     font-weight: bold;
     border: solid 3px #DDD92A;
-    background-color: white;
+    background-color: #2D2A32;
     border-radius: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
     box-sizing: border-box;
+    transition: all 0.3s;
 }
 
 .projetsinverse {
@@ -118,9 +119,18 @@ html {
 
 .projets:hover, .contact:hover {
     font-weight: normal;
-    color: #fff;
-    background-color: #2D2A32;
+    color: #2D2A32;
+    background-color: #fff;
     transition: all 0.3s;
+}
+
+.contact {
+    width: 100px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.contact i {
+    font-size: 35px;
 }
 
 .maintext {
