--- a/CSS/header.css
+++ b/CSS/header.css
@@ -41,8 +41,9 @@ html {
 .accueil {
     color:white;
     border-radius: 100px;
-    background-color: #2D2A32;
-    border: 3px solid #DDD92A;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
+    /* background-color: #2D2A32;
+    border: 3px solid #DDD92A; */
     height: 54px;
     width: 100px;
     display: flex;
@@ -53,12 +54,13 @@ html {
 }
 
 .accueil:hover {
-    color: #2D2A32;
-    background-color: white;
-    font-weight: bold;
+    /* color: #2D2A32;
+    background-color: white; */
+    /* font-weight: bold; */
+    transform: scale(1.2);
 }
 
-.accueilinverse {
+/* .accueilinverse {
     color:#2D2A32;
     border-radius: 100px;
     font-weight: bold;
@@ -84,25 +86,25 @@ html {
     align-items: center;
     justify-content: center;
     cursor: pointer;
-}
+} */
 
-.projets, .contact {
+.contact {
     height: 54px;
     width: 139px;
     color: #fff;
     font-weight: bold;
-    border: solid 3px #DDD92A;
-    background-color: #2D2A32;
+    /* border: solid 3px #DDD92A; */
+    /* background-color: #2D2A32; */
     border-radius: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
     transition: all 0.3s;
 }
 
-.projetsinverse {
+/* .projetsinverse {
     height: 54px;
     width: 139px;
     color: #fff;
@@ -115,18 +117,19 @@ html {
     cursor: pointer;
     box-sizing: border-box;
     transition: all 0.3s ease;
-}
+} */
 
-.projets:hover, .contact:hover {
-    font-weight: normal;
-    color: #2D2A32;
-    background-color: #fff;
-    transition: all 0.3s;
+.contact:hover {
+    /* font-weight: normal; */
+    /* color: #2D2A32; */
+    /* background-color: #fff; */
+    /* border: solid 2px #DDD92A; */
+    transform: scale(1.2);
 }
 
 .contact {
     width: 100px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
 }
 
 .contact i {
@@ -167,7 +170,7 @@ html {
     color: #EAE151;
 }
 
-.mail-container{
+/* .mail-container{
     background-color: #20BF55;
     border-radius: 25px;
     width: 500px;
@@ -244,8 +247,8 @@ html {
     font-size: 25px;
     font-weight: 400;
     font-family: 'Roboto', sans-serif;
-}
-
+} */
+/* 
 #Sendbtn:hover {
     background-color: #18af4a;
 }
@@ -262,4 +265,4 @@ html {
     font-size: 30px;
     color: red;
     cursor: pointer;
-}
+} */
