--- a/CSS/style.css
+++ b/CSS/style.css
@@ -42,7 +42,7 @@ section::after {
     height: 400px;
     /* background: linear-gradient(45deg,#2196f3,#31ff38); */
     background: linear-gradient(45deg, #dce35b, #45b649);
-    filter: drop-shadow(0 0 5px #dce35b);
+    filter: drop-shadow(0 0 5px #dce35b) blur(1px);
     animation-duration: 15s;
     animation-name: boule;
     animation-iteration-count: infinite;
@@ -60,7 +60,7 @@ section::after {
     width: 400px;
     height: 400px;
     background: linear-gradient(45deg, #feac5e, #c779d0, #4bc0c8);
-    filter: drop-shadow(0 0 5px #c779d0);
+    filter: drop-shadow(0 0 5px #c779d0) blur(1px);
     animation-duration: 20s;
     animation-name: boule;
     animation-iteration-count: infinite;
