--- a/CSS/style.css
+++ b/CSS/style.css
@@ -38,8 +38,8 @@ section::after {
     top: 200px;
     right: 100px;
     border-radius: 50%;
-    width: 400px;
-    height: 400px;
+    width: 42.50797024442083vh;
+    height: 42.50797024442083vh;
     /* background: linear-gradient(45deg,#2196f3,#31ff38); */
     background: linear-gradient(45deg, #dce35b, #45b649);
     filter: drop-shadow(0 0 5px #dce35b) blur(1px);
@@ -75,7 +75,7 @@ section::after {
     }
 
     50% {
-        transform: scale(2.5) rotate(360deg) translate3d(calc(var(--i)*25px), calc(var(--i)*10px), 0px);
+        transform: scale(2.5) rotate(360deg) translate3d(calc(var(--i)*2.656748140276302vh), calc(var(--i)*1.0626992561105206vh), 0px);
         opacity: 1;
     }
 
