--- a/CSS/header.css
+++ b/CSS/header.css
@@ -139,7 +139,7 @@ html {
 .maintext {
     color: #fff;
     font-family: 'Montserrat', sans-serif;
-    font-size: 64px;
+    font-size: 6.801275239107333vh;
     display: flex;
     line-height: 2.3em;
     letter-spacing: 0.7px;
