--- a/CSS/header.css
+++ b/CSS/header.css
@@ -41,10 +41,8 @@ html {
     color:white;
     border-radius: 100px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
-    /* background-color: #2D2A32;
-    border: 3px solid #DDD92A; */
     height: 5.738575982996812vh;
-    width: 100px;
+    width: 10.626992561105208vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -53,86 +51,26 @@ html {
 }
 
 .accueil:hover {
-    /* color: #2D2A32;
-    background-color: white; */
-    /* font-weight: bold; */
     transform: scale(1.2);
 }
 
-/* .accueilinverse {
-    color:#2D2A32;
-    border-radius: 100px;
+
+.contact {
+    height: 5.738575982996812vh;
+    width: 10.626992561105208vh;
+    color: #fff;
     font-weight: bold;
-    background-color: #fff;
-    border: solid 3px #DDD92A;
-    height: 54px;
-    width: 139px;
+    border-radius: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
     transition: all 0.3s;
-}
-
-.accueilinverse:hover {
-    color:white;
-    border-radius: 100px;
-    background-color: #2D2A32;
-    font-weight: normal;
-    height: 54px;
-    width: 139px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-} */
-
-.contact {
-    height: 54px;
-    width: 139px;
-    color: #fff;
-    font-weight: bold;
-    /* border: solid 3px #DDD92A; */
-    /* background-color: #2D2A32; */
-    border-radius: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    /* box-sizing: border-box; */
-    transition: all 0.3s;
-}
-
-/* .projetsinverse {
-    height: 54px;
-    width: 139px;
-    color: #fff;
-    border: solid 3px #DDD92A;
-    background-color: #2D2A32;
-    border-radius: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    box-sizing: border-box;
-    transition: all 0.3s ease;
-} */
-
-.contact:hover {
-    /* font-weight: normal; */
-    /* color: #2D2A32; */
-    /* background-color: #fff; */
-    /* border: solid 2px #DDD92A; */
-    transform: scale(1.2);
-}
-
-.contact {
-    width: 100px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
 }
 
-.contact i {
-    font-size: 35px;
+.contact:hover {
+    transform: scale(1.2);
 }
 
 .maintext {
@@ -155,7 +93,6 @@ html {
     display: flex;
     align-items: center;
     justify-content: center;
-    /* border: solid 7px #46494C; */
     margin: auto;
     margin-top: 3.1880977683315623vh;
     cursor: pointer;
@@ -168,100 +105,3 @@ html {
 .blue {
     color: #EAE151;
 }
-
-/* .mail-container{
-    background-color: #20BF55;
-    border-radius: 25px;
-    width: 500px;
-    height: 500px;
-    display: none;
-    position: absolute;
-    right: 30px;
-    top: 120px;
-    flex-direction: column;
-    justify-content: space-around;
-    z-index: 2;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-#nom, #mail {
-    font-family: 'Roboto', sans-serif;
-    height: 40px;
-    width: 200px;
-    border: none;
-    text-decoration: none;
-    border-radius: 13px;
-    font-size: 20px;
-    margin-left: 20px;
-    margin-top: 10px;
-    padding-left: 30px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-#mail {
-    width: 300px;
-}
-
-#message {
-    height: 200px;
-    width: 300px;
-    text-align: start;
-    font-size: 30px;
-    font-family: 'Roboto', sans-serif;
-    margin-left: 20px;
-    border: none;
-    border-radius: 13px;
-    padding-left: 10px;
-    padding-top: 10px;
-    font-size: 20px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-#nom:focus, #mail:focus, #message:focus {
-    outline: none;
-}
-
-.btnsend {
-    background-color: #46494C;
-    height: 120px;
-    width: 500px;
-    display: none;
-    position: absolute;
-    right: 30px;
-    top: 580px;
-    border-radius: 25px;
-}
-
-#Sendbtn {
-    height: 54px;
-    width: 139px;
-    border: none;
-    border-radius: 100px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    margin-top: 50px;
-    margin-left: 30px;
-    background-color: #20BF55;
-    text-align: center;
-    color: white;
-    font-size: 25px;
-    font-weight: 400;
-    font-family: 'Roboto', sans-serif;
-} */
-/* 
-#Sendbtn:hover {
-    background-color: #18af4a;
-}
-
-#Sendbtn:active {
-    background-color: #23cf5c;
-}
-
-#croix {
-    display: flex;
-    position: absolute;
-    top: 10px;
-    right: 20px;
-    font-size: 30px;
-    color: red;
-    cursor: pointer;
-} */
