all device proof

--- a/CSS/header.css
+++ b/CSS/header.css
@@ -82,6 +82,7 @@ html {
     letter-spacing: 0.7px;
     margin-top: 10vh;
     margin-left: 4.2507970244420825vh;
+    position: absolute;
 }
 
 .arrow {
