--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,8 +6,7 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 500px;
-    
+    margin-top: 90vh;
 }
 
 .boule {
