--- a/projets/Cat Generator/style.css
+++ b/projets/Cat Generator/style.css
@@ -10,15 +10,17 @@ body{
     font-family: 'Poppins', sans-serif;
     background: #232323;
     color: #fff;
+    height: 100vh;
+    width: 100%;
 }
 
 
 #cat1 {
+    display: flex;
+    position: absolute;
     height: 200px;
     width: 200px;
     border-radius: 50%;
-    display: flex;
-    position: absolute;
     top: 100px;
     right: 100px;
     background-size: cover;
@@ -26,36 +28,53 @@ body{
 }
 
 #cat2 {
+    display: flex;
+    position: absolute;
     height: 200px;
     width: 200px;
     border-radius: 50%;
-    display: flex;
-    position: absolute;
     bottom: 200px;
     left: 100px;
     background-size: cover;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
-.maintxt {
-    width: 300px;
+.refresh {
+    height: 200px;
+    width: 200px;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
 }
 
-.maintxt p{
-    position: absolute;
-    width: 489px;
-    height: 288px;
-    /* left: 716px; */
-    /* top: 396px; */
-    
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 96px;
-    line-height: 144px;
+.refresh ion-icon:hover {
+    animation: rotate 0.8s ease-in-out;
+}
+
+.refresh ion-icon {
     display: flex;
-    align-items: center;
-    text-align: center;
+    color: #fff;
+    font-size: 150px;
+}
+
+@keyframes rotate {
+    from {
+        transform: rotate(0deg);
+    }
+
+    30% {
+        transform: rotate(-50deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 
