--- a/CSS/header.css
+++ b/CSS/header.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 
 
 * {
@@ -106,4 +107,5 @@ html {
 
 .blue {
     color: #EAE151;
+    font-family: 'Permanent Marker', cursive;
 }
