--- a/CSS/style.css
+++ b/CSS/style.css
@@ -158,6 +158,11 @@ section {
     overflow: hidden;
 }
 
+.box .list a {
+    text-decoration: none;
+    color: #fff;
+}
+
 .box .list:hover {
     background: #fff;
     box-shadow: -15px 30px 50px rgba(0, 0, 0, 0.5);
@@ -216,8 +221,10 @@ section {
 .box .list .content p {
     font-size: 0.75em;
     transition: 0.5s;
+    
 }
 
 .box .list:hover .content h4, .box .list:hover .content p {
     color: #333;
+    
 }
